# ci_mpc

./: CMakeLists.txt  visualize_trajectory.py
config/: config.yaml
include/: compliant_contact_dynamics.hpp  contact_implicit_mpc.hpp  contact_parameter.hpp  math_types.hpp  mpc_settings.hpp  robot_handler.hpp  webots_interface.hpp
include/utils/: load_config_yaml.h  logger.hpp  loop.hpp  project_path.h  project_path.h.in
robot/mini_cheetah/urdf/: mini_cheetah.urdf  mini_cheetah_ground.urdf
src/: compliant_contact_dynamics.cpp  contact_implicit_mpc.cpp  main.cpp  robot_handler.cpp  webots_interface.cpp
